--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
                 <div class="main-content-wrap">
                     <h1 class="main__header"><span class="main__header-span">Эталон</span>Хаус - <br />
                         проверено временем</h1>
-                    <p class="main__tagline">Комплексный и высокопрофессиональный ремонт квартир, домов и коттеджей.</p>
+                    <p class="main__tagline">Комплексный и&nbsp;высокопрофессиональный ремонт квартир, домов и&nbsp;коттеджей.</p>
                     <a href="#contacts" class="btn main_btn js_link">Связаться с нами</a>
                 </div>
                 <img class="main-bg" src="./images/man.png">
@@ -68,8 +68,7 @@
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Ремонт квартир</h3>
-                        <p class="services__text">Выполняем все виды ремонтных работ любой сложности.
-                            На профессиональном уровне осуществляем отделочные, сантехнические и электротехнические работы под ключ.<br />
+                        <p class="services__text">Выполняем все виды ремонтных работ любой сложности. На&nbsp;профессиональном уровне осуществляем отделочные, сантехнические и&nbsp;электротехнические работы под&nbsp;ключ.<br />
                             Эконом. Стандарт. Премиум</p>
                     </div>
                 </li>
@@ -79,7 +78,7 @@
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Внутренняя отделка коттеджа</h3>
-                        <p class="services__text">На профессиональном уровне осуществляем отделочные, сантехнические и электротехнические работы.</p>
+                        <p class="services__text">На&nbsp;профессиональном уровне осуществляем отделочные, сантехнические и&nbsp;электротехнические работы.</p>
                     </div>
                 </li>
                 <li class="services-item">
@@ -91,7 +90,7 @@
                         <ul class="services-item-list">
                             <li class="services__text">Отделка бань, парильных под ключ, строительство саун</li>
                             <li class="services__text">Монтаж дымохода</li>
-                            <li class="services__text">Установка камина с облицовкой и без,<br />с разводкой теплого воздуха</li>
+                            <li class="services__text">Установка камина с&nbsp;облицовкой и&nbsp;без,<br />с&nbsp;разводкой теплого воздуха</li>
                             <li class="services__text">Монтаж банных печей</li>
                             <li class="services__text">Установка котельного оборудования</li>
                             <li class="services__text">Монтаж твердотопливных котлов отопления.</li>
@@ -104,8 +103,8 @@
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Установка заборов и ворот</h3>
-                        <p class="services__text">Установка заборов, калиток и ограждений всех видов.</p>
                         <ul class="services-item-list">
+                            <li class="services__text">Установка заборов, калиток и&nbsp;ограждений всех видов.</li>
                             <li class="services__text">Из профнастила</li>
                             <li class="services__text">Из евроштакетника</li>
                             <li class="services__text">С кирпичными столбами</li>
@@ -124,13 +123,13 @@
                     <div class="advantages-image">
                         <img src="./images/icon-experience.svg" alt="" class="advantages__icon">
                     </div>
-                    <p class="advantages__text">Опыт в строительстве более 15 лет</p>
+                    <p class="advantages__text">Опыт в строительстве более 15&nbsp;лет</p>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-image">
                         <img src="./images/icon-guarantee.svg" alt="" class="advantages__icon">
                     </div>
-                    <p class="advantages__text">Гарантия до 3х лет</p>
+                    <p class="advantages__text">Гарантия до 3х&nbsp;лет</p>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-image">
@@ -295,11 +294,11 @@
                     <p class="form-success__text">Ваше сообщение успешно отправлено</p>
                 </div>
                 <form class="form js_form" action="./send.php" method="POST">
-                    <input type="text" class="form__input js_modal-field" name="name" required placeholder="Имя">
-                    <input type="text" class="form__input js_modal-field" name="phone" required placeholder="Телефон">
+                    <input type="text" class="form__input js_modal-field" name="name"  placeholder="Имя">
+                    <input type="text" class="form__input js_modal-field" name="phone"  placeholder="Телефон">
                     <textarea class="form__textarea js_modal-field" name="message" placeholder="Ваше сообщение"></textarea>
                     <fieldset class="form-checkbox">
-                        <input type="checkbox" id="form-agree" class="form-checkbox__input" required checked>
+                        <input type="checkbox" id="form-agree" class="form-checkbox__input"  checked>
                         <label for="form-agree" class="form-checkbox-label">Согласие на обработку данных</label>
                     </fieldset>
                     <button class="btn" type="submit">Отправить</button>
