--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             <ul class="services-list">
                 <li class="services-item">
                     <div class="services-image">
-                        <img src="./images/icon-instruments.svg" alt="" class="services__icon">
+                        <img data-src="./images/icon-instruments.svg" alt="" class="services__icon lazy">
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Ремонт квартир</h3>
@@ -74,7 +74,7 @@
                 </li>
                 <li class="services-item">
                     <div class="services-image">
-                        <img src="./images/icon-finish.svg" alt="" class="services__icon">
+                        <img data-src="./images/icon-finish.svg" alt="" class="services__icon lazy">
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Внутренняя отделка коттеджа</h3>
@@ -83,7 +83,7 @@
                 </li>
                 <li class="services-item">
                     <div class="services-image">
-                        <img src="./images/icon-drill.svg" alt="" class="services__icon">
+                        <img data-src="./images/icon-drill.svg" alt="" class="services__icon lazy">
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Внутренняя отделка бань</h3>
@@ -99,7 +99,7 @@
                 </li>
                 <li class="services-item">
                     <div class="services-image">
-                        <img src="./images/icon-gate.svg" alt="" class="services__icon">
+                        <img data-src="./images/icon-gate.svg" alt="" class="services__icon lazy">
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Установка заборов и ворот</h3>
@@ -115,31 +115,32 @@
         </div>
     </div>
     <div class="advantages anchor-wrap">
+        <img data-src="./images/advantages-bg.jpg" class="advantages__bg lazy">
         <div id="advantages" class="anchor"></div>
         <div class="wrap">
             <h2 class="title">наши преимущества</h2>
             <ul class="advantages-list">
                 <li class="advantages-item">
                     <div class="advantages-image">
-                        <img src="./images/icon-experience.svg" alt="" class="advantages__icon">
+                        <img data-src="./images/icon-experience.svg" alt="" class="advantages__icon lazy">
                     </div>
                     <p class="advantages__text">Опыт в строительстве более 15&nbsp;лет</p>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-image">
-                        <img src="./images/icon-guarantee.svg" alt="" class="advantages__icon">
+                        <img data-src="./images/icon-guarantee.svg" alt="" class="advantages__icon lazy">
                     </div>
                     <p class="advantages__text">Гарантия до 3х&nbsp;лет</p>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-image">
-                        <img src="./images/icon-contract.svg" alt="" class="advantages__icon">
+                        <img data-src="./images/icon-contract.svg" alt="" class="advantages__icon lazy">
                     </div>
                     <p class="advantages__text">Работаем по договору,<br />без аванса</p>
                 </li>
                 <li class="advantages-item">
                     <div class="advantages-image">
-                        <img src="./images/icon-help.svg" alt="" class="advantages__icon">
+                        <img data-src="./images/icon-help.svg" alt="" class="advantages__icon lazy">
                     </div>
                     <p class="advantages__text">Поможем с выбором<br />материалов</p>
                 </li>
@@ -155,7 +156,7 @@
                     <div class="swiper-wrapper">
                         <!-- <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery.jpg" class="gallery__link glightbox" data-gallery="gallery1" data-glightbox="description: .gallery-desc-1; descPosition: bottom;">
-                                <img src="./images/gallery.jpg" alt="" class="gallery__image">
+                                <img data-src="./images/gallery.jpg" alt="" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Укладка плитки в ванне 1</p>
                             <div class="glightbox-desc gallery-desc-1">
@@ -165,116 +166,116 @@
                         </div> -->
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/13.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/13.jpg" alt="Душевая кабина" class="gallery__image">
+                                <img data-src="./images/gallery/13.jpg" alt="Душевая кабина" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Монтаж душевой кабины</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/9.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/9.jpg" alt="Квартира" class="gallery__image">
+                                <img data-src="./images/gallery/9.jpg" alt="Квартира" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Отделка квартиры</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/12.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/12.jpg" alt="Баня" class="gallery__image">
+                                <img data-src="./images/gallery/12.jpg" alt="Баня" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Внутренняя отделка бань</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/2.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/2.jpg" alt="Лоджия" class="gallery__image">
+                                <img data-src="./images/gallery/2.jpg" alt="Лоджия" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Отделка лоджии</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/8.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/8.jpg" alt="Камин" class="gallery__image">
+                                <img data-src="./images/gallery/8.jpg" alt="Камин" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Облицовка камина</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/6.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/6.jpg" alt="Кухня" class="gallery__image">
+                                <img data-src="./images/gallery/6.jpg" alt="Кухня" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Укладка плитки на кухне</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/11.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/11.jpg" alt="Ворота" class="gallery__image">
+                                <img data-src="./images/gallery/11.jpg" alt="Ворота" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора и ворот из профнастила</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/1.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/1.jpg" alt="Крыша" class="gallery__image">
+                                <img data-src="./images/gallery/1.jpg" alt="Крыша" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка крыши</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/3.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/3.jpg" alt="Тёплый пол" class="gallery__image">
+                                <img data-src="./images/gallery/3.jpg" alt="Тёплый пол" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Монтаж тёплых полов</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/4.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/4.jpg" alt="Дом" class="gallery__image">
+                                <img data-src="./images/gallery/4.jpg" alt="Дом" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Отделка дома</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/5.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/5.jpg" alt="Веранда" class="gallery__image">
+                                <img data-src="./images/gallery/5.jpg" alt="Веранда" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Отделка веранды</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/7.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/7.jpg" alt="Ванная комната" class="gallery__image">
+                                <img data-src="./images/gallery/7.jpg" alt="Ванная комната" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Укладка плитки в ванной комнате</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/10.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/10.jpg" alt="Трубы ХГВ" class="gallery__image">
+                                <img data-src="./images/gallery/10.jpg" alt="Трубы ХГВ" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Замена и монтаж труб ХГВ</p>
                         </div>
 
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/14.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/14.jpg" alt="Забор" class="gallery__image">
+                                <img data-src="./images/gallery/14.jpg" alt="Забор" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/15.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/15.jpg" alt="Забор" class="gallery__image">
+                                <img data-src="./images/gallery/15.jpg" alt="Забор" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/16.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/16.jpg" alt="Забор" class="gallery__image">
+                                <img data-src="./images/gallery/16.jpg" alt="Забор" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/17.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/17.jpg" alt="Забор" class="gallery__image">
+                                <img data-src="./images/gallery/17.jpg" alt="Забор" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/18.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/18.jpg" alt="Забор" class="gallery__image">
+                                <img data-src="./images/gallery/18.jpg" alt="Забор" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора</p>
                         </div>
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/19.jpg" class="gallery__link glightbox" data-gallery="gallery1">
-                                <img src="./images/gallery/19.jpg" alt="Забор" class="gallery__image">
+                                <img data-src="./images/gallery/19.jpg" alt="Забор" class="gallery__image lazy">
                             </a>
                             <p class="gallery__placeholder">Установка забора</p>
                         </div>
@@ -287,6 +288,8 @@
     </div>
     <div class="contacts anchor-wrap">
         <div id="contacts" class="anchor"></div>
+        <img data-src="./images/notebook.png" class="contacts__img contacts__img-left lazy">
+        <img data-src="./images/helmet.png" class="contacts__img contacts__img-right lazy">
         <div class="wrap">
             <div class="contacts-content">
                 <h2 class="title">контакты</h2>
@@ -294,11 +297,11 @@
                     <p class="form-success__text">Ваше сообщение успешно отправлено</p>
                 </div>
                 <form class="form js_form" action="./send.php" method="POST">
-                    <input type="text" class="form__input js_modal-field" name="name"  placeholder="Имя">
-                    <input type="text" class="form__input js_modal-field" name="phone"  placeholder="Телефон">
+                    <input type="text" class="form__input js_modal-field" name="name" required placeholder="Имя">
+                    <input type="text" class="form__input js_modal-field" name="phone" required placeholder="Телефон">
                     <textarea class="form__textarea js_modal-field" name="message" placeholder="Ваше сообщение"></textarea>
                     <fieldset class="form-checkbox">
-                        <input type="checkbox" id="form-agree" class="form-checkbox__input"  checked>
+                        <input type="checkbox" id="form-agree" class="form-checkbox__input" required checked>
                         <label for="form-agree" class="form-checkbox-label">Согласие на обработку данных</label>
                     </fieldset>
                     <button class="btn" type="submit">Отправить</button>
