--- a/app/index.html
+++ b/app/index.html
@@ -321,8 +321,8 @@
     <script src="./scripts/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
     <link rel="stylesheet" href="styles/glightbox.css">
-    <script src="scripts/glightbox.js"></script>
-    <script src="scripts/main.js" type="text/javascript" charset="utf-8"></script>
+    <script src="scripts/glightbox.min.js"></script>
+    <script src="scripts/main.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
