Added production features

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,20 @@
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Oswald:500,600|Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+    (function(m, e, t, r, i, k, a) {
+        m[i] = m[i] || function() {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        m[i].l = 1 * new Date();
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    ym(55413130, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true });
+    </script> <noscript>
+        <div><img src="https://mc.yandex.ru/watch/55413130" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -68,7 +82,7 @@
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Ремонт квартир</h3>
-                        <p class="services__text">Выполняем все виды ремонтных работ любой сложности. На&nbsp;профессиональном уровне осуществляем отделочные, сантехнические и&nbsp;электротехнические работы под&nbsp;ключ.<br />
+                        <p class="services__text">Выполняем все виды ремонтных работ любой сложности. Отделочные, сантехнические и&nbsp;электротехнические работы под&nbsp;ключ.<br />
                             Эконом. Стандарт. Премиум</p>
                     </div>
                 </li>
@@ -78,7 +92,15 @@
                     </div>
                     <div class="services-content">
                         <h3 class="services__title">Внутренняя отделка коттеджа</h3>
-                        <p class="services__text">На&nbsp;профессиональном уровне осуществляем отделочные, сантехнические и&nbsp;электротехнические работы.</p>
+                        <ul class="services-item-list">
+                            <li class="services__text">Ремонт пола в&nbsp;доме</li>
+                            <li class="services__text">Отделка стен в&nbsp;доме</li>
+                            <li class="services__text">Отделка потолка в&nbsp;доме</li>
+                            <li class="services__text">Двери и&nbsp;окна в&nbsp;доме</li>
+                            <li class="services__text">Электромонтажные работы</li>
+                            <li class="services__text">Сантехнические работы</li>
+                            <li class="services__text">Монтажные работы</li>
+                        </ul>
                     </div>
                 </li>
                 <li class="services-item">
@@ -242,7 +264,6 @@
                             </a>
                             <p class="gallery__placeholder">Замена и монтаж труб ХГВ</p>
                         </div>
-
                         <div class="gallery-slider-item swiper-slide">
                             <a href="./images/gallery/14.jpg" class="gallery__link glightbox" data-gallery="gallery1">
                                 <img data-src="./images/gallery/14.jpg" alt="Забор" class="gallery__image lazy">
@@ -323,6 +344,8 @@
     <link rel="stylesheet" href="styles/glightbox.css">
     <script src="scripts/glightbox.min.js"></script>
     <script src="scripts/main.min.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
+    <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=0b7578e0c41aeb992b4783cec0ef9513" charset="UTF-8" async></script>
 </body>
 
 </html>
