--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,30 @@
         <div><img src="https://mc.yandex.ru/watch/55413130" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
+    <!-- Marquiz script start -->
+    <script src="//script.marquiz.ru/v1.js" type="application/javascript"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            Marquiz.init({
+                id: '5d91b802f92e04004483efb3',
+                autoOpen: false,
+                autoOpenFreq: 'once',
+                openOnExit: false
+            });
+        });
+    </script>
+    <script src="//script.marquiz.ru/v1.js" type="application/javascript"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            Marquiz.init({
+                id: '5d91b802f92e04004483efb3',
+                autoOpen: 10,
+                autoOpenFreq: 'once',
+                openOnExit: false
+                });
+            });
+    </script>
+    <!-- Marquiz script end -->
 </head>
 
 <body>
